Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22627

Android: Open package location after build does not work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 15.0.0
    • Qt Creator 4.9.1, Qt Creator 14.0.1
    • Android Support
    • None
    • Windows
    • 6b69a2069 (master)

      In the Project Settings, there is an option to "open package location after build", which is convenient because it is otherwise a bit difficult to navigate to the directory where the APK is built.

      But when this is enabled on Windows, it will just spawn a default explorer window when the build finishes, it will not go to the correct directory.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            portale Alessandro Portale
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes